# NMKR-Identity

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
templates/: about.html  admin.html  admin_did.html  base.html  credential_create.html  credential_detail.html  credential_verify.html  dashboard.html  did_detail.html  forgot.html  index.html  login.html  register.html  reset.html  result.html  settings.html  wizard_key.html  wizard_kyc.html  wizard_review.html  wizard_start.html
token_identity/: __init__.py  attestation.py  cli.py  crypto.py  models.py  prism_did.py
token_identity/examples/: example_usage.py
token_identity/schemas/: did_document.schema.json  token_metadata.schema.json
webapp/: crypto_utils.py  db.py  forms.py  models.py
